src/platform/deploy/kustomize/unifiedui/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unified-ui
  labels:
    app.kubernetes.io/name: unified-ui
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: unified-ui
  ports:
    - name: http
      port: 80
      targetPort: 3005
